# laco

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: qa.yml  release.yml
sources/laco/: __init__.py  __init__.pyi  _env.py  _io.py  _lazy.py  _loader.py  _overrides.py  cli.py  keys.py  language.py  ops.py  utils.py
sources/laco/examples/: mlp.py
tests/: test_env.py  test_examples.py  test_handler.py  test_io.py  test_language.py  test_language_defaults.py  test_overrides.py  test_utils.py  test_version.py
